--- a/RemoteNotes/RemoteNotes.Android/RemoteNotes.Android.csproj
+++ b/RemoteNotes/RemoteNotes.Android/RemoteNotes.Android.csproj
@@ -39,41 +39,45 @@
         <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="Mono.Android"/>
-        <Reference Include="System"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="System.Xml.Linq"/>
-        <Reference Include="System.Xml"/>
+        <Reference Include="Mono.Android" />
+        <Reference Include="System" />
+        <Reference Include="System.Core" />
+        <Reference Include="System.Xml.Linq" />
+        <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583"/>
-        <PackageReference Include="Xamarin.Android.Support.Design" Version="23.4.0.1"/>
-        <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="23.4.0.1"/>
-        <PackageReference Include="Xamarin.Android.Support.v4" Version="23.4.0.1"/>
-        <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="23.4.0.1"/>
-        <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="23.4.0.1"/>
+        <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
+        <PackageReference Include="Xamarin.Android.Support.Design" Version="23.4.0.1" />
+        <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="23.4.0.1" />
+        <PackageReference Include="Xamarin.Android.Support.v4" Version="23.4.0.1" />
+        <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="23.4.0.1" />
+        <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="23.4.0.1" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="MainActivity.cs"/>
-        <Compile Include="Resources\Resource.Designer.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="MainActivity.cs" />
+        <Compile Include="Resources\Resource.Designer.cs" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-        <None Include="Resources\AboutResources.txt"/>
-        <None Include="Assets\AboutAssets.txt"/>
-        <None Include="Properties\AndroidManifest.xml"/>
+        <None Include="Resources\AboutResources.txt" />
+        <None Include="Assets\AboutAssets.txt" />
+        <None Include="Properties\AndroidManifest.xml" />
     </ItemGroup>
     <ItemGroup>
-        <AndroidResource Include="Resources\layout\Tabbar.axml"/>
-        <AndroidResource Include="Resources\layout\Toolbar.axml"/>
-        <AndroidResource Include="Resources\values\styles.xml"/>
-        <AndroidResource Include="Resources\values\colors.xml"/>
+        <AndroidResource Include="Resources\layout\Tabbar.axml" />
+        <AndroidResource Include="Resources\layout\Toolbar.axml" />
+        <AndroidResource Include="Resources\values\styles.xml" />
+        <AndroidResource Include="Resources\values\colors.xml" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\RemoteNotes\RemoteNotes.csproj">
             <Project>{0E151F0F-21FF-497B-8FD3-444EDA59D213}</Project>
             <Name>RemoteNotes</Name>
         </ProjectReference>
+        <ProjectReference Include="..\UI\RemoteNotes.UI.Shell\RemoteNotes.UI.Shell.csproj">
+          <Project>{948d2b0b-a43e-4156-acdd-577d8303336f}</Project>
+          <Name>RemoteNotes.UI.Shell</Name>
+        </ProjectReference>
     </ItemGroup>
-    <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets"/>
+    <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
