--- a/RemoteNotes/RemoteNotes.iOS/RemoteNotes.iOS.csproj
+++ b/RemoteNotes/RemoteNotes.iOS/RemoteNotes.iOS.csproj
@@ -87,32 +87,36 @@
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="Main.cs"/>
-        <Compile Include="AppDelegate.cs"/>
-        <None Include="Entitlements.plist"/>
-        <None Include="Info.plist"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Main.cs" />
+        <Compile Include="AppDelegate.cs" />
+        <None Include="Entitlements.plist" />
+        <None Include="Info.plist" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-        <InterfaceDefinition Include="Resources\LaunchScreen.storyboard"/>
+        <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
         <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
             <Visible>false</Visible>
         </ImageAsset>
     </ItemGroup>
     <ItemGroup>
-        <Reference Include="System"/>
-        <Reference Include="System.Xml"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="Xamarin.iOS"/>
+        <Reference Include="System" />
+        <Reference Include="System.Xml" />
+        <Reference Include="System.Core" />
+        <Reference Include="Xamarin.iOS" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583"/>
+        <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\RemoteNotes\RemoteNotes.csproj">
             <Project>{0E151F0F-21FF-497B-8FD3-444EDA59D213}</Project>
             <Name>RemoteNotes</Name>
         </ProjectReference>
+        <ProjectReference Include="..\UI\RemoteNotes.UI.Shell\RemoteNotes.UI.Shell.csproj">
+          <Project>{948d2b0b-a43e-4156-acdd-577d8303336f}</Project>
+          <Name>RemoteNotes.UI.Shell</Name>
+        </ProjectReference>
     </ItemGroup>
-    <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets"/>
+    <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
