--- a/RemoteNotes/Platform/RemoteNotes.iOS/RemoteNotes.iOS.csproj
+++ b/RemoteNotes/Platform/RemoteNotes.iOS/RemoteNotes.iOS.csproj
@@ -23,7 +23,7 @@
         <WarningLevel>4</WarningLevel>
         <ConsolePause>false</ConsolePause>
         <MtouchArch>x86_64</MtouchArch>
-        <MtouchLink>None</MtouchLink>
+        <MtouchLink>SdkOnly</MtouchLink>
         <MtouchDebug>true</MtouchDebug>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
@@ -106,14 +106,10 @@
         <Reference Include="Xamarin.iOS" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
+        <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\UI\RemoteNotes.UI.Shell\RemoteNotes.UI.Shell.csproj">
-          <Project>{948d2b0b-a43e-4156-acdd-577d8303336f}</Project>
-          <Name>RemoteNotes.UI.Shell</Name>
-        </ProjectReference>
-        <ProjectReference Include="..\UI\RemoteNotes.UI.Shell\RemoteNotes.UI.Shell.csproj">
           <Project>{948d2b0b-a43e-4156-acdd-577d8303336f}</Project>
           <Name>RemoteNotes.UI.Shell</Name>
         </ProjectReference>
