--- a/RemoteNotes/UI/RemoteNotes.UI.Control/RemoteNotes.UI.Control.csproj
+++ b/RemoteNotes/UI/RemoteNotes.UI.Control/RemoteNotes.UI.Control.csproj
@@ -5,6 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640" />
+        <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RemoteNotes.UI.ViewModel\RemoteNotes.UI.ViewModel.csproj" />
     </ItemGroup>
 </Project>
