--- a/RemoteNotes.Core/RemoteNotes.Rules/RemoteNotes.Rules.csproj
+++ b/RemoteNotes.Core/RemoteNotes.Rules/RemoteNotes.Rules.csproj
@@ -3,4 +3,8 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RemoteNotes.Rules.Contract\RemoteNotes.Rules.Contract.csproj" />
+    </ItemGroup>
 </Project>
