--- a/RemoteNotes.Service.Client/RemoteNotes.Service.Client.Stub/RemoteNotes.Service.Client.Stub.csproj
+++ b/RemoteNotes.Service.Client/RemoteNotes.Service.Client.Stub/RemoteNotes.Service.Client.Stub.csproj
@@ -3,4 +3,8 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RemoteNotes.Service.Client.Contract\RemoteNotes.Service.Client.Contract.csproj" />
+    </ItemGroup>
 </Project>
