--- a/RemoteNotes/UI/RemoteNotes.UI.ViewModel/RemoteNotes.UI.ViewModel.csproj
+++ b/RemoteNotes/UI/RemoteNotes.UI.ViewModel/RemoteNotes.UI.ViewModel.csproj
@@ -7,4 +7,9 @@
     <ItemGroup>
       <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\RemoteNotes.Core\RemoteNotes.Rules.Contract\RemoteNotes.Rules.Contract.csproj" />
+      <ProjectReference Include="..\..\..\RemoteNotes.Service.Client\RemoteNotes.Service.Client.Contract\RemoteNotes.Service.Client.Contract.csproj" />
+    </ItemGroup>
 </Project>
