--- a/RemoteNotes.Server/RemoteNotesServer/RemoteNotesServer.csproj
+++ b/RemoteNotes.Server/RemoteNotesServer/RemoteNotesServer.csproj
@@ -5,8 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
-      <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+      <ProjectReference Include="..\API\RemoteNotes.API\RemoteNotes.API.csproj" />
+      <ProjectReference Include="..\API\RemoteNotes.Hubs\RemoteNotes.Hubs.csproj" />
     </ItemGroup>
 
 </Project>
