Refactor client side authorization logic

--- a/RemoteNotes.Client/RemoteNotes.Service.Client/RemoteNotes.Service.Client.Stub/RemoteNotes.Service.Client.Stub.csproj
+++ b/RemoteNotes.Client/RemoteNotes.Service.Client/RemoteNotes.Service.Client.Stub/RemoteNotes.Service.Client.Stub.csproj
@@ -6,5 +6,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\RemoteNotes.Service.Client.Contract\RemoteNotes.Service.Client.Contract.csproj" />
+      <ProjectReference Include="..\..\..\RemoteNotes.Core\RemoteNotes.Domain\RemoteNotes.Domain.csproj" />
     </ItemGroup>
 </Project>
