--- a/RemoteNotes.Client/RemoteNotes.Service.Client/RemoteNotes.Service.Client.Contract/RemoteNotes.Service.Client.Contract.csproj
+++ b/RemoteNotes.Client/RemoteNotes.Service.Client/RemoteNotes.Service.Client.Contract/RemoteNotes.Service.Client.Contract.csproj
@@ -3,4 +3,10 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\RemoteNotes.Core\RemoteNotes.Domain\RemoteNotes.Domain.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Authorization\" />
+    </ItemGroup>
 </Project>
