--- a/RemoteNotes.Client/RemoteNotes.Service/RemoteNotes.Service.Domain/RemoteNotes.Service.Domain.csproj
+++ b/RemoteNotes.Client/RemoteNotes.Service/RemoteNotes.Service.Domain/RemoteNotes.Service.Domain.csproj
@@ -7,4 +7,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\RemoteNotes.Service.Client\RemoteNotes.Service.Client.Contract\RemoteNotes.Service.Client.Contract.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.3" />
+    </ItemGroup>
 </Project>
