--- a/RemoteNotes.Server/RemoteNotesServer/RemoteNotesServer.csproj
+++ b/RemoteNotes.Server/RemoteNotesServer/RemoteNotesServer.csproj
@@ -1,12 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <OutputType>Library</OutputType>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+      <LangVersion>latest</LangVersion>
+      <NoStdLib>false</NoStdLib>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+      <LangVersion>9.0</LangVersion>
+      <NoStdLib>false</NoStdLib>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\API\RemoteNotes.API\RemoteNotes.API.csproj" />
-      <ProjectReference Include="..\API\RemoteNotes.Hubs\RemoteNotes.Hubs.csproj" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\API\RemoteNotes.Hubs\RemoteNotes.Hubs.csproj" />
+      <ProjectReference Include="..\BL\RemoteNotes.BL.Security\RemoteNotes.BL.Security.csproj" />
+    </ItemGroup>
 </Project>
