Added repositories base logic

--- a/RemoteNotes.Server/DAL/RemoteNotes.DAL.MySql/RemoteNotes.DAL.MySql.csproj
+++ b/RemoteNotes.Server/DAL/RemoteNotes.DAL.MySql/RemoteNotes.DAL.MySql.csproj
@@ -6,7 +6,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\RemoteNotes.Core\RemoteNotes.Domain\RemoteNotes.Domain.csproj" />
-      <ProjectReference Include="..\RemoteNotes.DAL.Models\RemoteNotes.DAL.Models.csproj" />
+      <ProjectReference Include="..\RemoteNotes.DAL.Contract\RemoteNotes.DAL.Contract.csproj" />
     </ItemGroup>
 
 </Project>
