--- a/RemoteNotes.Server/DAL/RemoteNotes.DAL.MySql/RemoteNotes.DAL.MySql.csproj
+++ b/RemoteNotes.Server/DAL/RemoteNotes.DAL.MySql/RemoteNotes.DAL.MySql.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\RemoteNotes.DAL.Contract\RemoteNotes.DAL.Contract.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MySql.Data" Version="8.0.22" />
+    </ItemGroup>
+
 </Project>
