--- a/RemoteNotes.Client/RemoteNotes/Service/RemoteNotes.Service.Client.Contract/RemoteNotes.Service.Client.Contract.csproj
+++ b/RemoteNotes.Client/RemoteNotes/Service/RemoteNotes.Service.Client.Contract/RemoteNotes.Service.Client.Contract.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
+      <ProjectReference Include="..\..\..\..\RemoteNotes.Core\RemoteNotes.Domain\RemoteNotes.Domain.csproj" />
       <ProjectReference Include="..\..\..\RemoteNotes.Core\RemoteNotes.Domain\RemoteNotes.Domain.csproj" />
     </ItemGroup>
     <ItemGroup>
