--- a/RemoteNotes.Client/RemoteNotes/BL/RemoteNotes.API.Contract/RemoteNotes.API.Contract.csproj
+++ b/RemoteNotes.Client/RemoteNotes/BL/RemoteNotes.API.Contract/RemoteNotes.API.Contract.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\..\RemoteNotes.Core\RemoteNotes.Domain\RemoteNotes.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
