--- a/RemoteNotes.Client/RemoteNotes/Platform/RemoteNotes.Android/RemoteNotes.Android.csproj
+++ b/RemoteNotes.Client/RemoteNotes/Platform/RemoteNotes.Android/RemoteNotes.Android.csproj
@@ -46,12 +46,15 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
-        <PackageReference Include="Xamarin.Android.Support.Design" Version="23.4.0.1" />
-        <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="23.4.0.1" />
-        <PackageReference Include="Xamarin.Android.Support.v4" Version="23.4.0.1" />
-        <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="23.4.0.1" />
-        <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="23.4.0.1" />
+        <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.3" />
+        <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.3" />
+        <PackageReference Include="Xamarin.Android.Support.v4" Version="28.0.0.3" />
+        <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="28.0.0.3" />
+        <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.3" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
+        <PackageReference Include="Plugin.CurrentActivity">
+          <Version>2.1.0.4</Version>
+        </PackageReference>
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Activity\BaseAppActivity.cs" />
