--- a/RemoteNotes.Client/RemoteNotes/Platform/RemoteNotes.iOS/RemoteNotes.iOS.csproj
+++ b/RemoteNotes.Client/RemoteNotes/Platform/RemoteNotes.iOS/RemoteNotes.iOS.csproj
@@ -49,6 +49,7 @@
         <CodesignKey>iPhone Developer</CodesignKey>
         <MtouchDebug>true</MtouchDebug>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+        <MtouchLink>SdkOnly</MtouchLink>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
         <DebugType>none</DebugType>
@@ -60,6 +61,7 @@
         <ConsolePause>false</ConsolePause>
         <CodesignKey>iPhone Developer</CodesignKey>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+        <MtouchLink>SdkOnly</MtouchLink>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
         <DebugType>none</DebugType>
@@ -73,6 +75,7 @@
         <CodesignProvision>Automatic:AdHoc</CodesignProvision>
         <CodesignKey>iPhone Distribution</CodesignKey>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+        <MtouchLink>SdkOnly</MtouchLink>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
         <DebugType>none</DebugType>
@@ -85,6 +88,37 @@
         <CodesignProvision>Automatic:AppStore</CodesignProvision>
         <CodesignKey>iPhone Distribution</CodesignKey>
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+        <MtouchLink>SdkOnly</MtouchLink>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugMock|iPhone' ">
+      <DebugSymbols>true</DebugSymbols>
+      <DebugType>full</DebugType>
+      <Optimize>false</Optimize>
+      <OutputPath>bin\iPhone\DebugMock</OutputPath>
+      <DefineConstants>__IOS__;__MOBILE__;__UNIFIED__;DEBUG;MOCK</DefineConstants>
+      <ErrorReport>prompt</ErrorReport>
+      <WarningLevel>4</WarningLevel>
+      <ConsolePause>false</ConsolePause>
+      <MtouchArch>ARM64</MtouchArch>
+      <CodesignKey>iPhone Developer</CodesignKey>
+      <MtouchDebug>true</MtouchDebug>
+      <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+      <DeviceSpecificBuild>true</DeviceSpecificBuild>
+      <MtouchLink>SdkOnly</MtouchLink>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugMock|iPhoneSimulator' ">
+      <DebugSymbols>true</DebugSymbols>
+      <DebugType>full</DebugType>
+      <Optimize>false</Optimize>
+      <OutputPath>bin\iPhoneSimulator\DebugMock</OutputPath>
+      <DefineConstants>__IOS__;__MOBILE__;__UNIFIED__;DEBUG;MOCK</DefineConstants>
+      <ErrorReport>prompt</ErrorReport>
+      <WarningLevel>4</WarningLevel>
+      <ConsolePause>false</ConsolePause>
+      <MtouchArch>x86_64</MtouchArch>
+      <MtouchLink>SdkOnly</MtouchLink>
+      <MtouchDebug>true</MtouchDebug>
+      <DeviceSpecificBuild>true</DeviceSpecificBuild>
     </PropertyGroup>
     <ItemGroup>
         <Compile Include="Delegate\BaseAppDelegate.cs" />
