Added plugin media

--- a/RemoteNotes.Client/RemoteNotes/Platform/RemoteNotes.iOS/RemoteNotes.iOS.csproj
+++ b/RemoteNotes.Client/RemoteNotes/Platform/RemoteNotes.iOS/RemoteNotes.iOS.csproj
@@ -116,7 +116,7 @@
       <WarningLevel>4</WarningLevel>
       <ConsolePause>false</ConsolePause>
       <MtouchArch>x86_64</MtouchArch>
-      <MtouchLink>SdkOnly</MtouchLink>
+      <MtouchLink>None</MtouchLink>
       <MtouchDebug>true</MtouchDebug>
       <DeviceSpecificBuild>true</DeviceSpecificBuild>
     </PropertyGroup>
@@ -145,6 +145,9 @@
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
         <PackageReference Include="Xam.Plugin.DeviceInfo">
           <Version>4.1.1</Version>
+        </PackageReference>
+        <PackageReference Include="Xam.Plugin.Media">
+          <Version>5.0.1</Version>
         </PackageReference>
     </ItemGroup>
     <ItemGroup>
