--- a/RemoteNotes.Client/RemoteNotes/Platform/RemoteNotes.Android/RemoteNotes.Android.csproj
+++ b/RemoteNotes.Client/RemoteNotes/Platform/RemoteNotes.Android/RemoteNotes.Android.csproj
@@ -55,6 +55,9 @@
         <PackageReference Include="Plugin.CurrentActivity">
           <Version>2.1.0.4</Version>
         </PackageReference>
+        <PackageReference Include="Xam.Plugin.Media">
+          <Version>5.0.1</Version>
+        </PackageReference>
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Activity\BaseAppActivity.cs" />
